fixes and footer

--- a/index.html
+++ b/index.html
@@ -88,6 +88,9 @@
         </thead>
         <tbody id="dataRows"></tbody>
       </table>
+      <div class="footer">
+        <span>Made with 💓 in <strong>HTML</strong>  &  <strong>JS</strong> by <img src="github.png">reko-beep</span>
+      </div>
     </div>
   </body>
   <script>
