--- a/speciality.html
+++ b/speciality.html
@@ -87,6 +87,9 @@
       </thead>
       <tbody id="dataRows"></tbody>
     </table>
+    <div class="footer">
+      <span>Made with 💓 in <strong>HTML</strong>  &  <strong>JS</strong> by <img src="github.png">reko-beep</span>
+    </div>
     </div>
     <script>    
     const  columnParams = ['pmdcNo','name', 'quotaName', 'hospitalName'];
