--- a/speciality.html
+++ b/speciality.html
@@ -146,7 +146,7 @@
     function changeMeritList() {
       let merit = getMerit(
         meritData[default_filter.program],
-        default_filter.quota,
+        default_filter.quotaName,
         default_filter.speciality,
         default_filter.hospital,
       true);
