--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
   </head>
   <body>
     <div class="navbar notif">
+      This is a estimated merit list wait for official one<br>
+      Click on pmdc number of candidate or speciality name or hospital name to get their merit list or preferences<br>
       Merit list is updated according to recent gazette (25/6/24)<br>
       candidates increased FCPS (11),MD (9),MS (8)
     </div>
