--- a/hospital.html
+++ b/hospital.html
@@ -77,7 +77,7 @@
           <th>Quota</th>
           <th>Speciality</th>
           <th>Aggregate</th>
-          <th>Preference No.</th>
+          <th>Preference No. of Speciality</th>
           <th>Selected Elsewhere</th>
         </tr>
       </thead>
