--- a/candidate.html
+++ b/candidate.html
@@ -81,7 +81,7 @@
           <th>Speciality</th>
           <th>Aggregate</th>
           <th>Preference No.</th>
-          <th>Selected Elsewhere</th>
+          <th>Selected</th>
         </tr>
       </thead>
       <tbody id="dataRows"></tbody>
