--- a/speciality.html
+++ b/speciality.html
@@ -81,7 +81,7 @@
           <th>Quota</th>
           <th>Hospital</th>
           <th>Aggregate</th>
-          <th>Preference No.</th>
+          <th>Pref No. of Speciality</th>
           <th>Selected Elsewhere</th>
         </tr>
       </thead>
