--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       This is a estimated merit list wait for official one<br>
       Click on pmdc number of candidate or speciality name or hospital name to get their merit list or preferences<br>
       Merit list is updated according to recent gazette (25/6/24)<br>
-      candidates increased FCPS (11),MD (9),MS (8)
+      The marks calculated in list also includes the parent Institute marks
     </div>
     <nav class="navbar">
       <div class="logo-container">
