--- a/speciality.html
+++ b/speciality.html
@@ -196,14 +196,14 @@
       console.log(cdata)
       if (cdata.hasOwnProperty(default_filter.program)) {
         if (cdata.select[default_filter.program].quotaName != null) {
-          return 'Selected in   '+cdata.select[default_filter.program].specialityName+', '+cdata.select[default_filter.program].hospitalName+" at "+parseNumberth(cdata.select[default_filter.program].preferenceNo.toString())+" preference";
+          return "<span class='tooltip-inf'>Selected in   "+cdata.select[default_filter.program].specialityName+', '+cdata.select[default_filter.program].hospitalName+" at "+parseNumberth(cdata.select[default_filter.program].preferenceNo.toString())+" preference</span>";
          }
          else {
-          return 'Not Selected'
+          return "<span class='tooltip-inf'>Not Selected</span>"
          }
       }
       else {
-        return 'No Selection data found'
+        return "<span class='tooltip-inf'>No Selection data found</span>"
       }
      }
     function updateList(e) {
