--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <div class="navbar notif">
       This is a estimated merit list wait for official one<br>
       <strong><a href="help.html">How to use this website? click here</a></strong><br>
-      Merit list is updated according to recent gazette (28/6/24)<br>
-      The marks calculated in list also includes the parent Institute marks
+      Merit list is updated according to recent gazette <span class='important'>(29/6/24 1:00AM)</span><br>
+      The marks calculated in list also includes the parent Institute marks<br>
     </div>
     <nav class="navbar">
       <div class="logo-container">
