--- a/hospital.html
+++ b/hospital.html
@@ -65,7 +65,7 @@
             name="speciality"
             id="quota"
           >
-            <option value="" selected>Quota</option>
+            <option value="" selected>All Quota's</option>
           </select>
           <select
             onchange="updateList(event);"
@@ -73,7 +73,7 @@
             name="quota"
             id="speciality"
           >
-            <option value="" selected>Speciality</option>
+            <option value="" selected>All Specialities</option>
           </select>          
         </div>
     </div>
