--- a/help.html
+++ b/help.html
@@ -19,7 +19,7 @@
     
     <nav class="navbar">
       <div class="logo-container">
-        <img class="logo" onclick="homeUrl()"src="logo.png" />
+        <img class="logo" onclick="gotoUrl()"src="logo.png" />
       </div>
       <div class="main_container">
         <div class="info">
