--- a/hospital.html
+++ b/hospital.html
@@ -23,7 +23,7 @@
   <body>
     <nav class="navbar">
       <div class="logo-container">
-        <img class="logo"  onclick="homeUrl()" src="logo.png" />
+        <img class="logo"  onclick="gotoUrl()" src="logo.png" />
       </div>
     </nav>
     
