some english fix

--- a/schedule.html
+++ b/schedule.html
@@ -18,7 +18,7 @@
   </head>
   <body>
     <div class="navbar notif">
-      This schedule is fetched from backend of PRP site<br>
+      This schedule is fetched from PRP site<br>
       The titles with same date means they have not been started yet!
     </div>
     <nav class="navbar">
