--- a/hospital.html
+++ b/hospital.html
@@ -143,6 +143,7 @@
     }
      
       jQuery("#statTable").DataTable({
+        order: [[6, 'asc']],
         paging: true,
         searching: true,
         ordering: true,
