--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="navbar notif">
       This is a estimated merit list wait for official one<br>
       <strong><a href="help.html">How to use this website? click here</a></strong><br>
-      Merit list is updated according to recent gazette <span class='important'>(1/7/24 1:00PM)</span><br>
+      Merit list is updated according to recent gazette <span class='important'>(7/7/24 12:00AM)</span><br>
       The marks calculated in list also includes the parent Institute marks<br>
     </div>
     <nav class="navbar">
@@ -50,6 +50,7 @@
       </div>
       <div>
         <button class="schd-button lrgbtn" onmousedown="gotoUrl('schedule.html')"> View PRP Schedule </button>
+        <button class="schd-button lrgbtn" onmousedown="gotoUrl('changes.html')"> View Gazette Changes </button>
       </div>
       <div class="candidate-merit">
         <span><label for="fname">PMDC Number:</label>
