--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </head>
   <body>
     <div class="navbar notif">
-      This is a First Official Merit List<br>
+      This is a Second Official Merit List<br>
       <span class='important'>Click on Check Consent to check Candidate Consent</span><br>
     </div>
     <nav class="navbar">
@@ -50,7 +50,7 @@
       </div>
       <div>
         <button class="schd-button lrgbtn" onmousedown="gotoUrl('schedule.html')"> View PRP Schedule </button>
-        <button class="schd-button lrgbtn" onmousedown="gotoUrl('changes.html')"> View Difference between Estimated and Offical Merit List </button>
+        <button class="schd-button lrgbtn" onmousedown="gotoUrl('changes.html')"> View Difference between First and Second Merit List </button>
       </div>    
       <div class="filters">
         <select
