--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                 {
                     extend: 'pdfHtml5',
                     text: 'Download PDF',
-                    title : 'PRP '+default_filter.program+' Third Merit List '+default_filter.hospital+' '+default_filter.speciality+' ',
+                    title : 'PRP '+default_filter.program+' Second Merit List '+default_filter.hospital+' '+default_filter.speciality+' ',
                     customize: function (doc) {
                         
                         let table = doc.content[1].table.body;
