--- a/changes.html
+++ b/changes.html
@@ -31,13 +31,13 @@
       
     <div class="info">
         <h1 id="hospital-name">
-            Changes B/W First and Second Merit List
+            Changes B/W Second and Third Merit List
         </h1>
         <div class="share-link">
           <div class="share" onmousedown="shareUrl()"><img src="share.png"></div>
         </div>
         <p>
-            Below is changes observed in Second Official Merit list Compared to First one.<br>
+            Below is changes observed in Third Official Merit list Compared to Second one.<br>
             Select a program
           </p>
         
@@ -62,8 +62,8 @@
           <th>Quota</th>
           <th>Speciality</th>
           <th>Hospital</th>
+          <th>Third</th>
           <th>Second</th>
-          <th>First</th>
         </tr>
       </thead>
       <tbody id="dataRows"></tbody>
