previous merit lists

--- a/candidate.html
+++ b/candidate.html
@@ -24,7 +24,7 @@
   <body>
     <nav class="navbar">
       <div class="logo-container">
-        <img class="logo"  onclick="homeUrl()" src="logo.png" />
+        <img class="logo"  onclick="gotoUrl()" src="logo.png" />
       </div>
     </nav>
     <div class="main_container">
