--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 
     <div class="main_container" style="width: 80%">
       <div class="flex stat-container">
+        
         <div class="counter">
           <div id="FCPS" class="counter-value">500</div>
           <div class="counter-text">FCPS</div>
@@ -47,10 +48,11 @@
           <div class="counter-text">MS</div>
           <div class="counter-desc">Accuracy of Estimated Merit List</div>
         </div>
+      
       </div>
       <div>
         <button class="schd-button lrgbtn" onmousedown="gotoUrl('schedule.html')"> View PRP Schedule </button>
-        <button class="schd-button lrgbtn" onmousedown="gotoUrl('changes.html')"> View Difference between Fourth and Fifth Merit List </button>
+        <button class="schd-button lrgbtn" onmousedown="gotoUrl('prev.html')"> View Previous Merit Lists </button>
       </div>    
       <div class="filters">
         <select
