added scrutiny and updated info

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </head>
   <body>
     <div class="navbar notif">
-      This is a Fifth Official Merit List<br>
+      This is a Official Merit list of last <span class='important'>2024 Jan</span> Induction<br>
       <span class='important'>Click on Check Consent to check Candidate Consent</span><br>
     </div>
     <nav class="navbar">
@@ -53,6 +53,8 @@
       <div>
         <button class="schd-button lrgbtn" onmousedown="gotoUrl('schedule.html')"> View PRP Schedule </button>
         <button class="schd-button lrgbtn" onmousedown="gotoUrl('prev.html')"> View Previous Merit Lists </button>
+        <button class="schd-button lrgbtn" onmousedown="gotoUrl('scrutiny.html')"> View 2025 Grievance List </button>
+   
       </div>    
       <div class="filters">
         <select
