--- a/scrutiny.html
+++ b/scrutiny.html
@@ -19,7 +19,7 @@
   <body>
     <div class="navbar notif">
       This is list of <span class='important'>rejected</span> Candidates in Jan 2025<br>
-      The titles with same date means they have not been started yet!
+      List was updated at 26/12/2024 12:45am, click on check status to check current status
     </div>
     <nav class="navbar">
       <div class="logo-container">
