--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <button class="schd-button lrgbtn" onmousedown="gotoUrl('schedule.html')"> View PRP Schedule </button>
         <button class="schd-button lrgbtn" onmousedown="gotoUrl('prev.html')"> View Previous Merit Lists </button>
         <button class="schd-button lrgbtn" onmousedown="gotoUrl('scrutiny.html')"> View 2025 Grievance List </button>
-   
+        <button class="schd-button lrgbtn" onmousedown="gotoUrl('/2025/index.html')"> View unofficial Gazette 2025 </button>
       </div>    
       <div class="filters">
         <select
