--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
     candData = candDataUnOfficial;
     changeMeritList()
     $('.slidertext').css({'color': 'white', 'font-weight': 'bold', 'filter': 'drop-shadow(0px 0px 7px #107e47)', 'transition-duration': '1s'})
-    changeNotification("This is a unofficial Merit list based on unofficial<span class='important'> 2025 Jan</span> Gazette<br>To compare ur merit, see unofficial gazette and click on applicant ID <br><span class='important'>Click on speciality or hospital to see individual merits</span><br></br>")
+    changeNotification("This is a unofficial Merit list based on unofficial<span class='important'> 2025 Jan</span> Gazette<br>To compare ur merit, see unofficial gazette and click on applicant ID <br><span class='important'>Click on speciality or hospital to see individual merits</span><br>The issue with some candidates not being selected in FCPS have been recitified due to them not being awarded FCPS Marks<br>")
     
   }else {
     localStorage.setItem('viewUnofficial', 'false');
