--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                 {
                     extend: 'pdfHtml5',
                     text: 'Download PDF',
-                    title : 'PRP '+default_filter.program+' Fifth Merit List '+default_filter.hospital+' '+default_filter.speciality+' ',
+                    title : 'PRP '+default_filter.program+' List '+default_filter.hospital+' '+default_filter.speciality+' ',
                     customize: function (doc) {
                         
                         let table = doc.content[1].table.body;
