--- a/hospital.html
+++ b/hospital.html
@@ -57,6 +57,7 @@
             <span class="slider"></span>
           </label><span class="slidertext"> 2025 Unofficial Merit List</span> 
         </div>  
+        <h3 class="seats"> Seats Occupied: <span class="important" id="occupied">1</span> / <strong id="total"> 2 </strong></h3>
         <div class="filters">
           <select
             onchange="updateList(event);"
@@ -199,6 +200,10 @@
       changeMeritList();
     });
     function changeMeritList() {
+      let seats = getSeatsOccupied(meritData[default_filter.program],default_filter.program,  default_filter.quota, default_filter.hospital, default_filter.speciality);
+      for (k in seats) {        
+        const ele = document.getElementById(k).innerHTML = seats[k]
+      }
       let merit = getMerit(
         meritData[default_filter.program],
         default_filter.quota,
@@ -304,6 +309,7 @@ function changeMeritYear(e) {
         meritData.MD = mdMeritUnOfficial;
         candData = candDataUnOfficial;
         changeMeritList()
+
         $('.slidertext').css({'color': 'white', 'font-weight': 'bold', 'filter': 'drop-shadow(0px 0px 7px #107e47)', 'transition-duration': '1s'})
         changeNotification("This is a unofficial Merit list based on unofficial<span class='important'> 2025 Jan</span> Gazette<br>To compare ur merit, see unofficial gazette and click on applicant ID <br><span class='important'>Click on speciality or hospital to see individual merits</span><br></br>")
         
