--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
     meritData.MD = prevMdMeritList;
     candData = prevcandList;
     changeMeritList()
-    changeNotification("This is a Official Merit list of last <span class='important'>2024 Jan</span> Induction<br>      <span class='important'>Click on Check Consent to check Candidate Consent</span><br></br>")
+    changeNotification("Estimated Merit List of <span class='important'>2025 Jan</span> Induction<br>   will be uploaded tomorrow in evening   <span class='important'>Click on Check Consent to check Candidate Consent</span><br></br>")
     $('.slidertext').css({'color': 'white','font-weight': 'light', 'filter': 'drop-shadow(0px 0px 0px #107e47)', 'transition-duration': '1s'})
     
 
